--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -16,11 +16,11 @@
 				<div class="dropdown">hackersandslackers.com <i class="far fa-angle-down"></i></div>
 				<div style="clear:both"></div>
 			</div>
+			<div class="kanbancontainer">
 			{{> kanban}}
+		</div>
 		{{/post}}
 	</div>
 	<!-- end main post area -->
 </section>
-
-<!--<script src="{{asset "/js/repos.js"}}"></script>-->
 <!-- end site's main content area -->
