--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,6 +15,19 @@
 		}
 	}
 
+	.embedly-card {
+		@media(max-width: 600px){
+			margin-left: calc(~"-50vw + 50%") !important;
+			margin-right: calc(~"-50vw + 50%") !important;
+			height: 300px !important;
+			margin: 0 !important;
+			width: 100%;
+		}
+
+	}
+
+
+
 	.post-title {
 		text-align: left;
 		width: 100%;
