--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -25,6 +25,7 @@
 @import 'kanban.less';
 @import 'code.less';
 @import 'social.less';
+@import 'swiper.less';
 
 /*====================================================
 	fonts
