--- a/default.hbs
+++ b/default.hbs
@@ -13,16 +13,12 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
 	<!-- perhaps use this <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
+
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
 	{{! Scripts }}
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/utils/Draggable.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/CSSPlugin.min.js"></script>
-	<script src="{{asset "/js/includes/EasePack.min.js"}}"></script>
-	<script src="{{asset "/js/includes/CustomEase.min.js"}}"></script>
-
+	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
