--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -124,6 +124,7 @@ const doneColumn = document.getElementById("done");
 
   var swiper = new Swiper('.swiper-container', {
      height: 800,
+     noSwiping: true,
      breakpoints: {
     // when window width is <= 320px
       1000: {
