--- a/src/less/post.less
+++ b/src/less/post.less
@@ -164,8 +164,8 @@
 
 		.author {
 			.avi {
-				width: 20px;
-				height: 20px;
+				width: 30px;
+				height: 30px;
 				display: inline-block;
 				margin-right: 10px;
 				border-radius: 50%;
@@ -196,6 +196,7 @@
 
 			i {
 				margin-right: 10px;
+				font-size: 1.5em;
 			}
 
 			a {
