--- a/default.hbs
+++ b/default.hbs
@@ -17,6 +17,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
 	{{! Scripts }}
+	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
@@ -38,7 +39,7 @@
 	{{> header}}
 
 	{{{body}}}
-
+</body>
 	{{! insert footer partial}}
 
 {{> footer}}
