finally fixed author sidebar

--- a/partials/widget-github.hbs
+++ b/partials/widget-github.hbs
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<script type="text/javascript" src="https://github-profile.com/dist/gh-profile-card.min.js"></script>
+<script src="{{asset "/js/includes/gh-profile-card.min.js"}}"></script>
 <script>
   function createCard(username) {
     var widget = new GitHubCard({
