--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -24,7 +24,7 @@
  						{{#get "users" limit="all" include="count.posts" order="count.posts desc" }}
  							{{#foreach users}}
 
-								<div class="about-author" style="background: url({{cover_img}}) center center; background-color: rgba(255, 255, 255, 0.9); background-blend-mode: overlay;">
+								<div class="about-author">
 									<div class="author-specs">
 									{{#if profile_image}}
  										<a href="{{url}}" class="avatar-link"><img src="{{profile_image}}" alt="Author image" class="avatar"></a>
