--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -6,14 +6,20 @@
 .sidebar {
 	.tag-cloud {
 		a {
-			border: 1px solid #e6e6e6;
-			padding: 3px 11px;
+			border: 0;
+			padding: 4px 12px;
 			color: #627e90;
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
 			border-radius: 2px;
-			font-size: 13px !important;
+			font-size: 14px!important;
+			-webkit-transition: all .2s ease;
+			-moz-transition: all .2s ease;
+			-ms-transition: all .2s ease;
+			-o-transition: all .2s ease;
+			transition: all .2s ease;
+			background: #f2f3f5;
 
 			.transition(all 0.2s ease);
 			@media(max-width: 1000px) {
