--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -6,6 +6,30 @@
     display: none;
   }
 
+  .swiper-pagination {
+    position: absolute;
+    text-align: center;
+    -webkit-transition: .3s opacity;
+    -o-transition: .3s opacity;
+    transition: .3s opacity;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+    z-index: 10;
+    width: 115px !important;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    bottom: 20px!important;
+    left: 0!important;
+    right: 0!important;
+
+    .swiper-pagination-bullet {
+        width: 10px;
+        height: 10px;
+      }
+  }
+
+
   .container {
     max-width: 1200px;
 
@@ -105,6 +129,7 @@
     display: block;
     overflow: hidden;
     @media(max-width: 800px) {
+      margin-bottom: 0;
     }
   }
 
@@ -127,6 +152,7 @@
       }
       @media(max-width: 800px) {
         min-width: auto;
+        margin-bottom: 0;
         /*max-width: 90%;*/
       }
       @media(max-width: 600px) {
@@ -187,7 +213,6 @@
             font-size: 1em;
             font-family: 'akzidenz';
             color: #3c3d46;
-            max-width: 180px;
             line-height: 1.2;
             font-weight: 100;
             margin: 5px 0 20px;
