--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -1,5 +1,5 @@
 <!-- start widget -->
-{{#get "posts" limit="3" filter="primary_tag:-#hidden"}}
+{{#get "posts" limit="3" filter="tags:-[hash-hidden,Roundup,roundup]"}}
 <div class="widget">
 	<h4 class="title">Recent</h4>
 	<div class="content recent-post">
