--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -31,12 +31,12 @@
   }
 
   .about-author {
-    border: 1px solid #dcdcdc;
+    border: 1px solid #ececec;
     border-radius: 2px !important;
     background: #f7f7f7 !important;
     padding: 20px;
     margin: 10px 0;
-    width: 42%;
+    width: 42.5%;
     border: 1px solid #dcdcdc;
 		border-radius: 4px !important;
 
