--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -60,17 +60,20 @@
 			display: flex;
 			flex-direction: row;
     	flex-wrap: wrap;
+			justify-content: space-between;
 
 			a {
 				border: 0;
-    border-radius: 2px;
-    color: #fff;
-    background: #3d888c;
-    padding: 5px 12px;
-    display: inline-block;
-    height: fit-content;
-    width: fit-content;
-    margin: 0 10px 10px 0;
+		    border-radius: 2px;
+		    color: #fff;
+		    background: #3d888c;
+		    padding: 5px 12px;
+		    display: inline-block;
+		    height: fit-content;
+		    width: fit-content;
+		    margin: 0 10px 10px 0;
+				flex-grow: 1;
+		    text-align: center;
 
 
 				&:hover {
