--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -5,6 +5,11 @@
 ====================================================*/
 .sidebar {
 	.tag-cloud {
+		display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+
 		a {
 			border: 0;
 			padding: 4px 12px;
@@ -20,11 +25,12 @@
 			-o-transition: all .2s ease;
 			transition: all .2s ease;
 			background: #f2f3f5;
+			flex-grow: 1;
+			text-align: center;
 
 			.transition(all 0.2s ease);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
-				padding: 2px 9px !important;
 				margin: 0 5px 5px 0;
 			}
 
