--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -349,11 +349,14 @@
 
       .count {
         color: #ababab;
-        font-size: 16px;
-        font-family: 'proxima-nova',sans-serif;
+        font-size: 14px;
+        font-family: proxima-nova,sans-serif;
         bottom: 0;
         padding: 4px;
-        float:right;
+        float: right;
+        position: absolute;
+        top: 15px;
+        right: 12px;
       }
     }
   }
