minor visual annoyances

--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -1,3 +1,5 @@
+<script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+
 <script>
 
 /*====================================================
@@ -25,5 +27,15 @@ var success_message = "Please check your inbox and confirm your email address. T
 
 // 7. MongoDB Atlas settings
 
+// Initialize Firebase
+var config = {
+  apiKey: "AIzaSyAWGcYrRSU8EBEpZNCX3sworJqSmP_91YA",
+  authDomain: "hackersbackend.firebaseapp.com",
+  databaseURL: "https://hackersbackend.firebaseio.com",
+  projectId: "hackersbackend",
+  storageBucket: "",
+  messagingSenderId: "941909570452"
+};
+firebase.initializeApp(config);
 
 </script>
