--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -12,8 +12,13 @@
           font-size: 17px;
         }
 
-        &:hover > a {
+
+        &:hover{
+          color: #11004e;
+
+        a {
           text-decoration: none;
+          color: #11004e;
         }
 
         ul {
@@ -51,4 +56,5 @@
       }
     }
   }
+}
 }
