--- a/src/less/post.less
+++ b/src/less/post.less
@@ -200,6 +200,10 @@
 				font-size: 1.5em;
 			}
 
+			&.date{
+				font-size: 1em;
+			}
+
 			a {
 				text-decoration: none;
 
@@ -222,7 +226,7 @@
 		border-bottom: 0;
 		border-top: 0;
 		padding: 10px 20px;
-		background: #e7f1ed;
+		background: #e6f1ec;
 		border-left: 5px solid #26ae60;
 		margin: 30px 80px;
 		width: auto;
